--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -4,6 +4,7 @@
     </div>
   </:sidebar>
   <:content>
+    <div class="inventory-scrollable-content"></div>
     <PageHeader>
       <:title>Inventaris processen Lokale Besturen</:title>
       <:subtitle>
@@ -12,12 +13,15 @@
         </AuLinkExternal>
       </:subtitle>
       <:action>
-        <AuButton
-          @skin="secondary"
-          @icon="add"
-          iconAlignment="left"
-          {{on "click" this.addNewInventoryProcess}}
-        >Nieuw hoofdproces</AuButton>
+        {{#if this.currentSession.isAdmin}}
+          <AuButton
+            @skin="secondary"
+            @icon="add"
+            iconAlignment="left"
+            @disabled={{this.addProcessRowOpened}}
+            {{on "click" this.addNewInventoryProcess}}
+          >Nieuw hoofdproces</AuButton>
+        {{/if}}
       </:action>
     </PageHeader>
 
@@ -55,7 +59,6 @@
             @currentSorting={{this.sort}}
             @label="Nummer"
           />
-          <th></th>
         </c.header>
         {{#if this.hasErrored}}
           <TableMessage::Error />
@@ -74,6 +77,76 @@
             <td>{{conceptualProcess.title}}</td>
             <td>{{conceptualProcess.number}}</td>
           </c.body>
+        {{/if}}
+        {{#if this.addProcessRowOpened}}
+          <tbody>
+            <tr>
+              <td>
+                <PowerSelect
+                  @placeholder="Selecteer een categorie"
+                  @onChange={{this.handleProcessCategoryChange}}
+                  @options={{this.categories}}
+                  @selected={{this.processCategory}}
+                  as |category|
+                >
+                  {{category.label}}
+                </PowerSelect>
+              </td>
+              <td>
+                <PowerSelect
+                  @placeholder="Selecteer een domein"
+                  @onChange={{this.handleProcessDomainChange}}
+                  @options={{this.availableDomains}}
+                  @selected={{this.processDomain}}
+                  as |domain|
+                >
+                  {{domain.label}}
+                </PowerSelect>
+              </td>
+              <td>
+                <PowerSelect
+                  @placeholder="Selecteer een groep"
+                  @onChange={{this.handleProcessGroupChange}}
+                  @options={{this.availableGroups}}
+                  @selected={{this.processGroup}}
+                  as |group|
+                >
+                  {{group.label}}
+                </PowerSelect>
+              </td>
+              <td>
+                <AuInput @placeholder="Zoek een conceptueel proces" />
+              </td>
+              <td>
+                <div
+                  class="au-u-flex au-u-flex--row au-u-flex--vertical-center"
+                >
+                  {{this.newProcessId}}
+                  {{#if this.addProcessRowEdited}}
+                    <AuButton
+                      @skin="naked"
+                      @icon="redo"
+                      class="inventory-row-redo-icon"
+                      {{on "click" this.clearSelections}}
+                    />
+                  {{else}}
+                    <AuButton
+                      @skin="naked"
+                      @icon="cross"
+                      class="inventory-row-cancel-icon"
+                      {{on "click" this.closeAddProcessRow}}
+                    />
+                  {{/if}}
+                  <AuButton
+                    @skin="naked"
+                    @icon="check"
+                    class="inventory-row-add-icon"
+                  />
+
+                </div>
+              </td>
+            </tr>
+          </tbody>
         {{/if}}
       </t.content>
     </AuDataTable>
