fixed height modal during filtering

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -80,6 +80,10 @@
   display: none !important;
 }
 
+#process-concept-selection-form .au-c-sidebar-container__content {
+  min-height: 554px;
+}
+
 .process-modal-table {
   min-width: auto;
 }
