--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -79,3 +79,15 @@
 .bjs-breadcrumbs {
   display: none !important;
 }
+
+.inventory-process-number {
+  width: 3.5rem;
+}
+
+.inventory-row-button-group .au-c-button {
+  visibility: hidden;
+}
+
+tr:hover .inventory-row-button-group .au-c-button {
+  visibility: visible;
+}
