--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -75,25 +75,55 @@
             <td>{{conceptualProcess.processGroup.processDomain.label}}</td>
             <td>{{conceptualProcess.processGroup.label}}</td>
             <td>{{conceptualProcess.title}}</td>
-            <td>{{conceptualProcess.number}}</td>
+            <td>
+              <div class="au-u-flex au-u-flex--row au-u-flex--vertical-center">
+                <span
+                  class="inventory-process-number"
+                >{{conceptualProcess.number}}</span>
+                <AuButtonGroup
+                  @inline={{true}}
+                  class="inventory-row-button-group"
+                >
+                  <AuButton
+                    @icon="pencil"
+                    @skin="naked"
+                    @size="large"
+                    {{on
+                      "click"
+                      (fn this.editInventoryProcess conceptualProcess)
+                    }}
+                  />
+                  <AuButton
+                    @icon="bin"
+                    @skin="naked"
+                    @size="large"
+                    @alert={{true}}
+                  />
+                </AuButtonGroup>
+              </div>
+            </td>
           </c.body>
         {{/if}}
       </t.content>
     </AuDataTable>
 
-    {{#if this.addProcessModalOpened}}
+    {{#if this.isModalOpen}}
       <form {{on "submit" (perform this.saveInventoryProcess)}}>
         <AuModal
-          @modalOpen={{this.addProcessModalOpened}}
-          @closeModal={{this.closeAddProcessModal}}
+          @modalOpen={{this.isModalOpen}}
+          @closeModal={{this.closeModal}}
         >
-          <:title>Voeg nieuw inventaris proces toe</:title>
+          <:title>{{if
+              this.isEditing
+              "Bewerk inventaris proces"
+              "Voeg nieuw inventaris proces toe"
+            }}</:title>
           <:body>
 
             <AuLabel>Titel</AuLabel>
             <AuInput
               @width="block"
-              @value={{this.title}}
+              value={{this.title}}
               {{on "input" this.setTitle}}
             />
 
@@ -150,7 +180,7 @@
               {{else}}
                 <AuButton
                   @skin="naked"
-                  {{on "click" this.closeAddProcessModal}}
+                  {{on "click" this.closeModal}}
                 >Annuleer</AuButton>
               {{/if}}
               <AuButton
