--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -98,6 +98,7 @@
                     @skin="naked"
                     @size="large"
                     @alert={{true}}
+                    {{on "click" (fn this.openDeleteModal conceptualProcess)}}
                   />
                 </AuButtonGroup>
               </div>
@@ -123,7 +124,7 @@
             <AuLabel>Titel</AuLabel>
             <AuInput
               @width="block"
-              value={{this.title}}
+              value={{this.currentProcess.title}}
               {{on "input" this.setTitle}}
             />
 
@@ -169,7 +170,7 @@
           </:body>
           <:footer>
             <AuButtonGroup class="au-u-flex--end">
-              {{#if this.addProcessModalEdited}}
+              {{#if this.showResetButton}}
                 <AuButton
                   @skin="naked"
                   @icon="redo"
@@ -177,15 +178,14 @@
                   {{on "click" this.clearSelections}}
                 >
                   Herstel keuzes</AuButton>
-              {{else}}
-                <AuButton
-                  @skin="naked"
-                  {{on "click" this.closeModal}}
-                >Annuleer</AuButton>
               {{/if}}
               <AuButton
+                @skin="secondary"
+                {{on "click" this.closeModal}}
+              >Annuleer</AuButton>
+              <AuButton
                 @skin="primary"
-                @disabled={{not this.formIsValid}}
+                @disabled={{not this.canSave}}
                 {{on "click" (perform this.saveInventoryProcess)}}
               >Opslaan</AuButton>
 
@@ -193,6 +193,34 @@
           </:footer>
         </AuModal>
       </form>
+    {{/if}}
+
+    {{#if this.isDeleteModalOpen}}
+      <AuModal
+        @modalOpen={{this.isDeleteModalOpen}}
+        @closeModal={{this.closeModal}}
+      >
+        <:title>Verwijder proces</:title>
+        <:body>
+          Weet u zeker dat u het proces
+          <strong>{{this.processToDelete.title}}</strong>
+          wilt verwijderen?
+        </:body>
+        <:footer>
+          <AuButtonGroup class="au-u-flex--end">
+            <AuButton
+              @skin="naked"
+              {{on "click" this.closeModal}}
+            >Annuleer</AuButton>
+            <AuButton
+              @skin="primary"
+              @alert={{true}}
+              {{on "click" (perform this.deleteInventoryProcess)}}
+            >Verwijderen</AuButton>
+
+          </AuButtonGroup>
+        </:footer>
+      </AuModal>
     {{/if}}
   </:content>
 </SidebarContainer>
