--- a/app/components/page-header.hbs
+++ b/app/components/page-header.hbs
@@ -1,6 +1,11 @@
 <header ...attributes>
   {{#if (has-block "action")}}
-    <AuToolbar @border="bottom" @size="medium" @nowrap={{true}} as |Group|>
+    <AuToolbar
+      @border={{or @border "bottom"}}
+      @size="medium"
+      @nowrap={{true}}
+      as |Group|
+    >
       <Group>
         <div>
           <AuHeading>
