--- a/app/components/sidebar-container.hbs
+++ b/app/components/sidebar-container.hbs
@@ -1,4 +1,6 @@
-<div class="au-c-sidebar-container">
+<div class="au-c-sidebar-container" ...attributes>
   <div class="au-c-sidebar-container__sidebar">{{yield to="sidebar"}}</div>
-  <div class="au-c-sidebar-container__content" id="content" tabindex="0">{{yield to="content"}}</div>
+  <div class="au-c-sidebar-container__content" id="content" tabindex="0">{{yield
+      to="content"
+    }}</div>
 </div>
