Revert "boilerplate + routes"
This reverts commit 66f7e51645376cbd2ca962b4e21eb364c55898dc.

--- a/app/components/page-header.hbs
+++ b/app/components/page-header.hbs
@@ -1,11 +1,6 @@
 <header ...attributes>
   {{#if (has-block "action")}}
-    <AuToolbar
-      @border={{or @border "bottom"}}
-      @size="medium"
-      @nowrap={{true}}
-      as |Group|
-    >
+    <AuToolbar @border="bottom" @size="medium" @nowrap={{true}} as |Group|>
       <Group>
         <div>
           <AuHeading>
