Link process concept to process (#114)
* Add conceptual processes classes

* Add new concept scheme uris

* Add inventory template

* Update title

* Fetch inventory data

* Display conceptual processes in list

* Clear filters column

* Enable sorting

* Add inventory tab

* Show process navigation bar only when authenticated

* Add custom pagination

* add open and close modal states

* use AuTable

* Selecting processconcept + styling

* depend less on custom css

* add todo comment

* add todo

* refactor

* fix lint

* Add right column

* add padding when merging columns

* refactoring

* remove height 100% from sidebar instead of hardcoding max-height

* resolve pr comments

* add alphabetic sort

* filtering

* fix border bug

* fixed height modal during filtering

* remove logs

* cascading filtering

* enable search

* centered loading and no results msg

---------

Co-authored-by: Martijn Bogaert <martijn.bogaert@sirus.be>

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -79,3 +79,40 @@
 .bjs-breadcrumbs {
   display: none !important;
 }
+
+#process-concept-selection-form .au-c-sidebar-container__content {
+  min-height: 554px;
+}
+
+.process-modal-table {
+  min-width: auto;
+}
+
+.process-modal-table .au-c-link {
+  text-decoration: none;
+  color: var(--au-gray-1000);
+  outline: none;
+}
+
+.process-modal-table .au-c-link:hover {
+  color: var(--au-blue-700);
+}
+
+.process-modal-table-wrapper {
+  max-height: 554px;
+  min-height: 554px;
+}
+
+.process-change-button {
+  flex-shrink: 0;
+}
+
+.process-modal-row.is-selected {
+  background-color: var(--au-blue-100);
+  border: 2px solid var(--au-blue-600);
+  color: var(--au-blue-700);
+}
+
+.process-modal-row.is-selected .au-c-link {
+  color: var(--au-blue-700);
+}
