--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -67,13 +67,13 @@
       Link met procesinventaris
     </:title>
     <:header>
-      {{#unless this.currentSession.readOnly}}
+      {{#if @canEdit}}
         <AuButton
           @skin="naked"
           @icon="pencil"
           {{on "click" this.toggleEdit}}
         >Wijzig</AuButton>
-      {{/unless}}
+      {{/if}}
     </:header>
     <:card as |Card|>
       <Card.Columns>
