--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -11,7 +11,15 @@
 {{else}}
   <PageHeader>
     <:title>
-      {{this.process.title}}
+      <div class="au-u-flex au-u-flex--vertical-center">
+        {{this.process.title}}
+        <AuButton
+          class="au-u-padding-left-small"
+          @icon="link"
+          @skin="link"
+          @hideText={{true}}
+          {{on "click" this.copyUrl}}
+        /></div>
     </:title>
     <:action>
       <AuPill @icon="clock-rewind">Laatst aangepast op
