feat: make the process clickable in blueprints-card
Refs: oph-701

--- a/app/components/process/blueprint-card.hbs
+++ b/app/components/process/blueprint-card.hbs
@@ -61,7 +61,11 @@
             <:content>
               <ul>
                 {{#each @process.linkedBlueprints as |blueprint|}}
-                  <li>{{blueprint.title}}</li>
+                  <li>
+                    <AuLinkExternal @newTab={{true}} href={{blueprint.href}}>
+                      {{blueprint.title}}
+                    </AuLinkExternal>
+                  </li>
                 {{/each}}
               </ul>
             </:content>
