--- a/app/components/process/icr-card.hbs
+++ b/app/components/process/icr-card.hbs
@@ -188,6 +188,20 @@
               </div>
             </:content>
           </Item>
+          <Item>
+            <:label>Gekoppeld aan</:label>
+            <:content>
+              <ul>
+                {{#each this.blueprintUsages as |usage|}}
+                  <li>
+                    <AuLinkExternal @newTab={{true}} href={{usage.href}}>
+                      {{usage.title}}
+                    </AuLinkExternal>
+                  </li>
+                {{/each}}
+              </ul>
+            </:content>
+          </Item>
         </:left>
         <:right as |Item|>
           <Item>
